--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,9 @@ Size=500,500
 Collapsed=0
 
 [Window][Configuration window]
-ViewportPos=1022,248
+ViewportPos=957,221
 ViewportId=0x7D1F2E89
-Size=500,625
+Size=574,625
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -22,7 +22,7 @@ Size=500,500
 Collapsed=0
 
 [Window][Object list]
-ViewportPos=1358,398
+ViewportPos=1427,371
 ViewportId=0x24C33CC2
 Size=500,500
 Collapsed=0
@@ -40,7 +40,8 @@ Size=501,500
 Collapsed=0
 
 [Window][Save as##ChooseFileDlgKey]
-Pos=30,125
+ViewportPos=694,442
+ViewportId=0x5D662E16
 Size=500,500
 Collapsed=0
 
@@ -409,6 +410,190 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xC5B6F25F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8C580AD0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7F8345BA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x66ACB4F5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCCE03E2F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDADE8A15,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6366CB07,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x819280D0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD944BCAD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC3B6526D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1A7CD51E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAFA15CB9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8AD73C9E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE4D18FBF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x620A23C2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7B25D28D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x685C1A67,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x83B3FCA5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0AB44E2D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7620CEC6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x70D8943B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x87F9ED29,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x367D3EC3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDE48C217,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD5CA351E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0862A62A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB17F8D2E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB97BEBA1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA0541AEE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9CBABBA3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x85954AEC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2AE113EC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2117C223,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3838336C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE27B596C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFB54A823,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x75E92F7F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6CC6DE30,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x01C2FBD4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6DFD46E3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6097C63A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4FE02BCC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x56CFDA83,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x228D7C62,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3BA28D2D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD4A8B0DC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCD874193,4]
 RefScale=13
 Column 0  Sort=0v
 
