--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,9 @@ Size=500,500
 Collapsed=0
 
 [Window][Configuration window]
-ViewportPos=957,221
+ViewportPos=973,180
 ViewportId=0x7D1F2E89
-Size=574,625
+Size=500,625
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -22,9 +22,9 @@ Size=500,500
 Collapsed=0
 
 [Window][Object list]
-ViewportPos=1427,371
+ViewportPos=1451,245
 ViewportId=0x24C33CC2
-Size=500,500
+Size=501,500
 Collapsed=0
 
 [Window][Add C0 Surface]
@@ -34,13 +34,13 @@ Size=500,500
 Collapsed=0
 
 [Window][Choose file##ChooseFileDlgKey]
-ViewportPos=871,342
+ViewportPos=870,339
 ViewportId=0x8DF731DF
-Size=501,500
+Size=500,500
 Collapsed=0
 
 [Window][Save as##ChooseFileDlgKey]
-ViewportPos=694,442
+ViewportPos=692,442
 ViewportId=0x5D662E16
 Size=500,500
 Collapsed=0
@@ -594,6 +594,446 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xCD874193,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x99DA42F5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x70F9B3FE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x04DEF3F3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6318DD2F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x14A72637,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0C639A70,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF2545B29,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDBB708E9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD738C4C0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0AD31DB6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC1C15742,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3CDAF33E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x49A0A63A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7D9DE49C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xED5921E0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF476D0AF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA52A21B9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBC05D0F6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEA956280,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x46DDDD53,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC04C394B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF293B36F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x894B8980,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x93C34638,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x62DD98B8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x88FAA1C0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x31D6A005,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDB9B9528,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4C821074,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x84029DAD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBEBA2B51,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x45AE41A2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x268822CC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x646E9B9F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x899CA33C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA1D0F22F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDEFDC87B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x00ECE1F0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFE0E2476,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0586957E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0149D89E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x186629D1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x550549B1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAF567431,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x203F3DC1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCAAB778D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9D561BA0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x81593F5A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA61A75A3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB6FAED1D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0F588F50,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x917452BF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF6E6B608,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5B3923EE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF1434448,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5DDC8502,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x599BA0B7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2520200E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3E7B2483,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9F5361F7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF3BCDF97,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x45B8DA64,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x448502B4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x18584772,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDB77AEE8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE8BA5295,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0F34C540,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9979421B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEC3710AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF51C9C22,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x92F8CD4B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x26430AC6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEECBB684,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD2092359,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA3046244,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA2D37C2C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1C984A9C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCFD95830,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA99D3A1E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x23D3272D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFA49681E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x048442D2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x936B1666,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x50E4F995,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x86AC7EDD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF04F1B52,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8F16AF5D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC47351F6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCB75C175,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA4544A05,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE6E61914,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5ECCB0DA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9FD2A6C3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE20AE622,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF77CE7B6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEC2BFF64,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x79C92ABB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5708ECD2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCFE2716F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE1051DEE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDF322851,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8BAE1EEF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x78D33D30,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAA122D1D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDC6A4B9B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9E26066B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE56A2FCA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x960A1AC4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEB62FF93,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE39EE191,4]
 RefScale=13
 Column 0  Sort=0v
 
