--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=500,500
 Collapsed=0
 
 [Window][Configuration window]
-ViewportPos=973,180
+ViewportPos=955,195
 ViewportId=0x7D1F2E89
 Size=500,625
 Collapsed=0
@@ -22,9 +22,9 @@ Size=500,500
 Collapsed=0
 
 [Window][Object list]
-ViewportPos=1451,245
+ViewportPos=1467,168
 ViewportId=0x24C33CC2
-Size=501,500
+Size=501,814
 Collapsed=0
 
 [Window][Add C0 Surface]
@@ -1034,6 +1034,150 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xE39EE191,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x00FD1B97,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x029C8375,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFFFAFCA8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2FB9CEE9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDC73B7E7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDE0943DD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAC33736A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x35AC45E7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCE2E204A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA5B8FB9B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6D27B790,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC05A39F5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9915809E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x606534C4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB1597F56,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1D8BF3E0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5F6E9C31,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8A6E75B7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE5EA49BA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x25EF2D9B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4DC76945,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7E7504AE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x32995067,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x587F1E9A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x778AEA18,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x06F02F4D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1FDFDE02,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA9C20213,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB0EDF35C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7F55BC7F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x667A4D30,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD58E16D8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCCA1E797,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x551CA8E9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4C3359A6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x579A5FD8,4]
 RefScale=13
 Column 0  Sort=0v
 
