--- a/CAD Bane.vcxproj.filters
+++ b/CAD Bane.vcxproj.filters
@@ -234,6 +234,18 @@
     <ClCompile Include="src\math\bezier.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\objects\curves\intersectioncurve.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objects\mixins\parametric.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\math\intersections.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objects\solids\parametricviewcanvas.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="external\include\KHR\khrplatform.h">
@@ -1595,6 +1607,8 @@
     <None Include="shaders\c2surface.tese" />
     <None Include="shaders\gregory.tesc" />
     <None Include="shaders\gregory.tese" />
+    <None Include="shaders\trim.frag" />
+    <None Include="shaders\torus.vert" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="external\lib\glfw3.lib" />
